--- a/Gateway/pom.xml
+++ b/Gateway/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.vozh.art</groupId>
         <artifactId>MicroServiceTemplate</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>Gateway</artifactId>
@@ -45,5 +46,6 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
