--- a/ProcessingService/pom.xml
+++ b/ProcessingService/pom.xml
@@ -37,6 +37,11 @@
         </dependency>
 
         <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.vozh.art</groupId>
             <artifactId>CommonDto</artifactId>
             <version>1.0-SNAPSHOT</version>
