--- a/DataService/pom.xml
+++ b/DataService/pom.xml
@@ -33,6 +33,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.vozh.art</groupId>
+            <artifactId>CommonDto</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
