--- a/Gateway/docker-compose.yml
+++ b/Gateway/docker-compose.yml
@@ -23,14 +23,15 @@ services:
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: keycloak_password
       KC_HOSTNAME: localhost
-      KC_HOSTNAME_PORT: 8080
+      KC_HTTP_PORT: 8080
+      KC_HOSTNAME_PORT: 8484
       KC_HTTP_ENABLED: "true"
       KC_HOSTNAME_STRICT_HTTPS: "false"
       KC_HEALTH_ENABLED: "true"
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin_password
     ports:
-      - "8181:8080"
+      - "8484:8080"
     depends_on:
       - postgres
     networks:
