--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.vozh.art</groupId>
-        <artifactId>MicroServiceTemplate</artifactId>
+        <artifactId>microservice-tmpl</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>EurekaServer</artifactId>
+    <artifactId>eureka-server</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
