common-module integrated into spring boot sys, creates common Jar, than  executable. now paketo buildpaks can aggregate Jar into image
'dependencies.dependency.(groupId:artifactId:type:classifier)' must be unique: com.vozh.art:common-module:jar -> duplicate declaration of version 0.0.1-SNAPSHOT @ line 78, column 21
Some problems were encountered while building the effective model for com.vozh.art:notification-service-mcv-tmpl:jar:0.0.1-SNAPSHOT
'dependencies.dependency.scope' for org.projectlombok:lombok:jar must be one of [provided, compile, runtime, test, system] but is 'annotationProcessor'. @ line 61, column 20
It is highly recommended to fix these problems because they threaten the stability of your build.
For this reason, future Maven versions might no longer support building such malformed projects.

fixed

--- a/data-service-mvc-tmpl/pom.xml
+++ b/data-service-mvc-tmpl/pom.xml
@@ -59,12 +59,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.vozh.art</groupId>
-            <artifactId>common-module</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.vozh.art</groupId>-->
+<!--            <artifactId>common-module</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
