--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 
 
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.vozh.art</groupId>
+            <artifactId>common-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -48,6 +56,12 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.vozh.art</groupId>-->
+<!--                <artifactId>common-module</artifactId>-->
+<!--                <version>0.0.1-SNAPSHOT</version>-->
+<!--                <scope>compile</scope>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
