--- a/common-module/pom.xml
+++ b/common-module/pom.xml
@@ -13,14 +13,22 @@
     <groupId>com.vozh.art</groupId>
     <artifactId>common-module</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>CommonDto</name>
-    <description>CommonDto</description>
+    <packaging>jar</packaging>
+
+    <name>common-module</name>
+    <description>Common module for Spring Boot microservices</description>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
@@ -28,8 +36,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-<!--            </scope>annotationProcessor</scope>-->
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -38,9 +45,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-<!--                pring Boot Maven Plugin не может найти главный класс для этого модуля-->
                 <configuration>
+<!-- <skip>true</skip> to avoid creating an executable JAR.-->
                     <skip>true</skip>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
