--- a/processing-service-mvc-tmpl/pom.xml
+++ b/processing-service-mvc-tmpl/pom.xml
@@ -7,9 +7,10 @@
         <groupId>com.vozh.art</groupId>
         <artifactId>microservice-tmpl</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>processing-service-mcv-tmpl</artifactId>
+    <artifactId>processing-service-mvc-tmpl</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -74,12 +75,6 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.vozh.art</groupId>
-            <artifactId>common-module</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 
 
