--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.vozh.art</groupId>
         <artifactId>microservice-tmpl</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>eureka-server</artifactId>
