successfully starting new pod and service for processing microservice

--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
 
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>com.vozh.art</groupId>
-            <artifactId>common-module</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.vozh.art</groupId>-->
+<!--            <artifactId>common-module</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--&lt;!&ndash;            <scope>compile</scope>&ndash;&gt;-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>io.dekorate</groupId>
@@ -62,12 +62,7 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>com.vozh.art</groupId>-->
-<!--                <artifactId>common-module</artifactId>-->
-<!--                <version>0.0.1-SNAPSHOT</version>-->
-<!--                <scope>compile</scope>-->
-<!--            </dependency>-->
+
         </dependencies>
     </dependencyManagement>
 
