--- a/notification-service-mvc-tmpl/pom.xml
+++ b/notification-service-mvc-tmpl/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vozh.art</groupId>
+            <artifactId>common-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
