configMap with io.dekorate io.dekorate docker image prefix(Admin/) fixed

--- a/notification-service-mvc-tmpl/src/main/resources/application.properties
+++ b/notification-service-mvc-tmpl/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.mail.username=vozhov.artem1@gmail.com
 spring.mail.password=axgi ajop wmat xrkm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#io.dekorate.kubernetes
+dekorate.kubernetes.part-of=spring-microservices
