--- a/data-service-mvc-tmpl/pom.xml
+++ b/data-service-mvc-tmpl/pom.xml
@@ -60,6 +60,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>kubernetes-spring-starter</artifactId>
+            <version>4.1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>com.vozh.art</groupId>
