--- a/data-service-mvc-tmpl/src/main/resources/application.properties
+++ b/data-service-mvc-tmpl/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
+#io.dekorate.kubernetes
 
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
