--- a/processing-service-mvc-tmpl/pom.xml
+++ b/processing-service-mvc-tmpl/pom.xml
@@ -49,7 +49,11 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.dekorate</groupId>
+            <artifactId>kubernetes-spring-starter</artifactId>
+            <version>4.1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
