--- a/kind-ingress-config.yaml
+++ b/kind-ingress-config.yaml
@@ -1,5 +1,8 @@
+
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+
+
 nodes:
   - role: control-plane
     kubeadmConfigPatches:
@@ -15,3 +18,10 @@ nodes:
       - containerPort: 443
         hostPort: 443
         protocol: TCP
+  - role: worker
+  - role: worker
+
+#
+#kind create cluster --name multi-node-cluster --config kind-ingress-config.yaml
+
+#kind delete cluster --name=kind
