--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>gateway-react</module>
 <!--        <module>data-service-mvc-tmpl</module>-->
         <module>common-module</module>
-<!--        <module>processing-service-mvc-tmpl</module>-->
+        <module>processing-service-mvc-tmpl</module>
 <!--        <module>notification-service-mvc-tmpl</module>-->
     </modules>
 
