keycloak.yaml enabled uris checked, new realm created

--- a/k8s/manifests/infrastructure/keycloak.yaml
+++ b/k8s/manifests/infrastructure/keycloak.yaml
@@ -181,11 +181,12 @@ spec:
     app: keycloak
   ports:
     - protocol: TCP
-      port: 8484
+      port: 8080
       targetPort: 8080
-  type: ClusterIP  # Или NodePort, в зависимости от вашей конфигурации
+  type: ClusterIP
 ---
 
 
+#todo use in different namespace
 
 
