kakfa broker configured

--- a/gateway-react/src/main/resources/application.properties
+++ b/gateway-react/src/main/resources/application.properties
@@ -25,6 +25,8 @@ resilience4j.circuitbreaker.configs.defualt.automatic-transition-from-open-to-ha
 #resillience4j timeout
 resilience4j.timelimiter.configs.defualt.timeout-duration=3s
 
+#realm url
+keycloak.auth-server-url=http://keycloak.default.svc.cluster.local
 processing.service.url=http://processing-service-mvc-tmpl.default.svc.cluster.local
 data.service.url=http://data-service-mvc-tmpl.default.svc.cluster.local
 notification.service.url=http://notification-service-mvc-tmpl.default.svc.cluster.local
