--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,30 +4,49 @@ metadata:
   name: microservice-template
 #requires:
 
-test: []
+#test: []
 
-build:
-  artifacts:
-
-    - image: gateway-react
-      context: .
-      buildpacks:
-        builder: paketobuildpacks/builder:base
-        env:
-          - BP_MAVEN_PROJECT_MODULES=gateway-react
-          - BP_MAVEN_BUILT_ARTIFACT=gateway-react/target/gateway-react-1.0-SNAPSHOT.jar
-
-    - image: processing-service-mvc-tmpl
-      context: .
-      buildpacks:
-        builder: paketobuildpacks/builder:base
-        env:
-          - BP_MAVEN_PROJECT_MODULES=processing-service-mvc-tmpl
-          - BP_MAVEN_BUILT_ARTIFACT=processing-service-mvc-tmpl/target/processing-service-mvc-tmpl-1.0-SNAPSHOT.jar
-
-
+#build:
+#  artifacts:
+#
+#    - image: gateway-react
+#      context: .
+#      buildpacks:
+#        builder: paketobuildpacks/builder:base
+#        env:
+#          - BP_MAVEN_PROJECT_MODULES=gateway-react
+#          - BP_MAVEN_BUILT_ARTIFACT=gateway-react/target/gateway-react-1.0-SNAPSHOT.jar
+#
+#    - image: processing-service-mvc-tmpl
+#      context: .
+#      buildpacks:
+#        builder: paketobuildpacks/builder:base
+#        env:
+#          - BP_MAVEN_PROJECT_MODULES=processing-service-mvc-tmpl
+#          - BP_MAVEN_BUILT_ARTIFACT=processing-service-mvc-tmpl/target/processing-service-mvc-tmpl-1.0-SNAPSHOT.jar
 
 
+profiles:
+  - name: gateway-react
+    build:
+      artifacts:
+        - image: gateway-react
+          context: .
+          buildpacks:
+            builder: paketobuildpacks/builder:base
+            env:
+              - BP_MAVEN_PROJECT_MODULES=gateway-react
+              - BP_MAVEN_BUILT_ARTIFACT=gateway-react/target/gateway-react-1.0-SNAPSHOT.jar
+    manifests:
+      rawYaml:
+        - ./gateway-react/gateway-react-config.yaml
+        - ./gateway-react/src/main/resources/configured-kubernetes.yml
+    deploy:
+      kubeContext: multi-node-cluster
+
+#    deploy:
+#        kubectl:
+#          manifests: ["gateway-react/skaffold.yaml"]
 
 #kubectl port-forward pod/gateway-react-bc5b494b6-g4vr8 8080:80
 #curl http://localhost:8080/api/processing/test
