keycloak-ingress.yaml

--- a/gateway-react/src/main/resources/application.properties
+++ b/gateway-react/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.root =INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak.defualt.svc.cluster.local/realms/MicrosTemplate
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak.default.svc.cluster.local:80/realms/MicrosTemplate
 
 
 #actuator ednpoints
@@ -26,7 +26,7 @@ resilience4j.circuitbreaker.configs.defualt.automatic-transition-from-open-to-ha
 resilience4j.timelimiter.configs.defualt.timeout-duration=3s
 
 #realm url
-keycloak.auth-server-url=http://keycloak.default.svc.cluster.local
+keycloak.auth-server-url=http://keycloak.default.svc.cluster.local:80
 processing.service.url=http://processing-service-mvc-tmpl.default.svc.cluster.local
 data.service.url=http://data-service-mvc-tmpl.default.svc.cluster.local
 notification.service.url=http://notification-service-mvc-tmpl.default.svc.cluster.local
