need to make new rool on win firewall to acusess keycloak admin console

--- a/k8s/manifests/infrastructure/keycloak-ingress.yaml
+++ b/k8s/manifests/infrastructure/keycloak-ingress.yaml
@@ -8,6 +8,7 @@ spec:
     - hosts:
         - localhost
       secretName: tls-secret
+  ingressClassName: nginx
   rules:
     - host: localhost
       http:
