--- a/gateway-react/src/main/resources/configured-kubernetes.yml
+++ b/gateway-react/src/main/resources/configured-kubernetes.yml
@@ -75,6 +75,11 @@ apiVersion: networking.k8s.io/v1
 kind: IngressClass
 metadata:
   name: nginx
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
   # annotations:
   #   ingressclass.kubernetes.io/is-default-class: "true"
 spec:
