--- a/data-service-mvc-tmpl/src/main/resources/application.properties
+++ b/data-service-mvc-tmpl/src/main/resources/application.properties
@@ -16,5 +16,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
-
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+#mongoDB conf
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=root
+spring.data.mongodb.password=admin
+spring.data.mongodb.database=MongoDocumentDb
+spring.data.mongodb.authentication-database=admin
+
+#JKS
+keystore.path=./keystore.p12
+keystore.password=megaPassword
