--- a/data-service-mvc-tmpl/pom.xml
+++ b/data-service-mvc-tmpl/pom.xml
@@ -84,6 +84,18 @@
             <version>2.16.1</version>
             <scope>compile</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.pdfbox</groupId>-->
+<!--            <artifactId>pdfbox</artifactId>-->
+<!--            <version>2.0.29</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.7</version>
+            <type>pom</type>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>org.bouncycastle</groupId>-->
