--- a/data-service-mvc/pom.xml
+++ b/data-service-mvc/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>data-service-mvc-tmpl</artifactId>
+    <artifactId>data-service-mvc</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
